--- a/src/app/shared/ui/section-container/section-container.component.html
+++ b/src/app/shared/ui/section-container/section-container.component.html
@@ -1,4 +1,4 @@
-<!-- Header (opcional) -->
+<!-- Header-->
 <div *ngIf="heading || description || actionsTpl" class="card-header section__head" [class.is-sticky]="sticky">
   <div class="section__titlewrap">
     <h2 *ngIf="heading" class="section-title" [id]="headingId">{{ heading }}</h2>
